Angular routing problem: new page showing below old page

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ng": "0.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "razorpay": "^2.8.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.4",
